Fix bouncing background on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -290,6 +290,9 @@ nav {
 
 /* Responsive */
 @media (max-width: 768px) {
+    html, body {
+        overscroll-behavior-y: none;
+    }
     body {
         background-attachment: scroll;
     }
