--- a/css/n-americagame.css
+++ b/css/n-americagame.css
@@ -3,7 +3,7 @@
 /* Aikajana idean, ja alkuperäisen rakenteen sain W3schools: https://www.w3schools.com/howto/howto_css_timeline.asp */
 /* Ongelmien  ratkaisuun DeepSeek AI, https://chat.deepseek.com/ */
 
-html {
+html,body {
     scroll-behavior:smooth;
 }
 body {
@@ -248,6 +248,9 @@ nav p {
 }
 /* Responsiivisuus tabletille */
 @media (max-width: 850px) {
+    html, body {
+        overscroll-behavior-y: none;
+    }
     body {
         background-attachment: scroll; /* Estää "ruutukaappauksen" efektin häiriöt */
     }
