--- a/css/overview.css
+++ b/css/overview.css
@@ -113,7 +113,7 @@ nav {
   top: 50%;
   transform: translate(-50%, -50%) rotate(-45deg);
 }
-
+/* summary -----------------------------------------*/
 .summary-layout {
   display: flex;
   flex-direction: column;
@@ -151,7 +151,7 @@ nav {
   animation: fadeIn 1.2s ease-out 1s forwards;
 }
 .games-grid h2 {
-  font-size: 1.4rem;
+  font-size: 1.25rem;
   margin-bottom: 3px;
 }
 .games-grid p {
@@ -165,6 +165,7 @@ nav {
   border: 2px solid rgba(255, 255, 255, 0.3);
   border-radius: 12px;
   padding: 25px;
+
   font-weight: bold;
   color: #fff;
   cursor: pointer;
@@ -208,7 +209,7 @@ nav {
   padding: 0 10px 5px 10px;
 }
 .summary-description, .total-score {
-  font-size: clamp(1rem, 2vw, 1.1rem);
+  font-size: clamp(1rem, 3vw, 1.15rem);
   text-align: center;
   max-width: 800px;
   color: #ffffff;
@@ -275,11 +276,9 @@ nav {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   z-index: 1000;
 }
-
 .developers {
   justify-self: start;
 }
-
 #dev {
   margin: 0;
   font-size: 0.85rem;
@@ -287,33 +286,28 @@ nav {
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
-
 .developer-list {
   display: grid;
   grid-template-columns: repeat(2, auto);
   gap: 0 1.5rem;
   margin-top: 0.5rem;
 }
-
 .column p {
   margin: 0.2rem 0;
   font-size: 0.8rem;
   line-height: 1.2;
 }
-
 .project {
   text-align: center;
   font-size: 0.9rem;
   font-weight: bold;
 }
-
 .project p {
   margin: 0.4rem 0 0;
   font-weight: normal;
   font-size: 0.8rem;
   opacity: 0.8;
 }
-
 .logo {
   justify-self: end;
 }
@@ -325,6 +319,9 @@ nav {
 
 /* Mobile */
 @media (max-width: 768px) {
+  html, body {
+    overscroll-behavior-y: none;
+}
   body {
     background-attachment: scroll; /* Estää "ruutukaappauksen" efektin häiriöt */
 }
